--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -778,6 +778,7 @@ h6 {
 .page-title {
   color: var(--default-color);
   background-color: var(--background-color);
+  margin-top: 100px;
   padding: 20px 0;
   position: relative;
 }
