--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -180,6 +180,10 @@ h6 {
     flex-direction: column;
     flex-wrap: nowrap;
   }
+
+  .justify-content-center {
+    margin-bottom: 25px;
+}
 }
 
 .header .topbar .contact-info i a {
