--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -183,7 +183,14 @@ h6 {
 
   .justify-content-center {
     margin-bottom: 25px;
+  }
 }
+
+@media (max-width: 415px) {
+
+  .justify-content-center {
+    font-size: 10px;
+  }
 }
 
 .header .topbar .contact-info i a {
