--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -877,6 +877,7 @@ section,
   margin-bottom: 0;
   position: relative;
   z-index: 2;
+  font-size: 23px;
 }
 
 @media (max-width: 575px) {
@@ -978,6 +979,7 @@ section,
 .about .content ul {
   list-style: none;
   padding: 0;
+  font-size: 20px;
 }
 
 .about .content ul li {
@@ -985,7 +987,6 @@ section,
 }
 
 .about .content ul li span{
-  font-size: 1.25rem;
   color: var(--accent-color);
 }
 
@@ -1032,39 +1033,6 @@ section,
 /*--------------------------------------------------------------
 # Cards Section
 --------------------------------------------------------------*/
-/* .cards .card {
-  background-color: var(--surface-color);
-  color: var(--default-color);
-  border: 1px solid color-mix(in srgb, var(--default-color), transparent 90%);
-  padding: 40px;
-  margin: -1px;
-  border-radius: 0;
-}
-
-.cards .card span {
-  display: block;
-  font-size: 35px;
-  font-weight: 400;
-  color: var(--accent-color);
-}
-
-.cards .card h4 {
-  color: color-mix(in srgb, var(--heading-color), transparent 20%);
-  font-size: 24px;
-  font-weight: 600;
-  padding: 0;
-  margin: 20px 0;
-  text-align: center;
-}
-
-.cards .card p {
-  color: color-mix(in srgb, var(--default-color), transparent 40%);
-  font-size: 18px;
-  margin: 0;
-  padding: 0;
-  text-align: justify;
-} */
-
 .cards .service-item {
   background-color: var(--surface-color);
   text-align: center;
@@ -1074,53 +1042,17 @@ section,
   height: 100%;
 }
 
-.cards .service-item .icon {
-  margin: 0 auto;
-  width: 64px;
-  height: 64px;
-  background: var(--accent-color);
-  border-radius: 4px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 20px;
-  transition: 0.3s;
-  transform-style: preserve-3d;
-}
-
-.cards .service-item .icon i {
-  color: var(--contrast-color);
-  font-size: 28px;
-  transition: ease-in-out 0.3s;
-}
-
-.cards .service-item .icon::before {
-  position: absolute;
-  content: "";
-  left: -8px;
-  top: -8px;
-  height: 100%;
-  width: 100%;
-  background: color-mix(in srgb, var(--accent-color), transparent 80%);
-  border-radius: 5px;
-  transition: all 0.3s ease-out 0s;
-  transform: translateZ(-1px);
-}
-
-.cards .service-item .icon img{
-  width: 60px;
-}
-
 .cards .service-item h3{
   font-weight: 700;
   margin: 10px 0 15px 0;
   font-size: 25px;
   color: var(--accent-color);
+  text-transform: uppercase;
 }
 
 .cards .service-item p {
   line-height: 24px;
-  font-size: 25px;
+  font-size: 23px;
   margin-bottom: 0;
   text-align: justify;
 }
@@ -1183,6 +1115,15 @@ section,
   padding: 80px 20px;
   transition: all ease-in-out 0.3s;
   height: 100%;
+}
+
+.services .stretched-link h3{
+  text-transform: uppercase;
+  font-size: 25px;
+}
+
+.services .stretched-link p{
+  font-size: 23px;
 }
 
 .services .service-item .icon {
@@ -1737,17 +1678,17 @@ section,
 }
 
 .service-details h3 {
-  font-size: 26px;
+  font-size: 23px;
   font-weight: 700;
 }
 
 .service-details h4 {
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 700;
 }
 
 .service-details p {
-  font-size: 25px;
+  font-size: 20px;
   text-align: justify;
 }
 
@@ -1767,14 +1708,15 @@ section,
   padding: 25px 0 5px 0;
   display: flex;
   /* align-items: center; */
-  font-size: 25px;
-  text-align: justifyservices;
+  /* font-size: 25px; */
+  text-align: justify;
 }
 
 .service-details ul i {
   /* font-size: 20px; */
   margin-right: 8px;
   color: var(--accent-color);
+  text-align: justify;
 }
 
 .service-details ul li span{
