--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1714,20 +1714,22 @@ section,
   list-style: none;
   padding: 0;
   font-size: 18px;
-  /* margin: 0 50px; */
+}
+
+.service-details .ss-p1 {
+  background-color: var(--background-color);
 }
 
 .service-details ul li {
   padding: 25px 0 5px 0;
   display: flex;
-  /* align-items: center; */
-  /* font-size: 25px; */
   text-align: justify;
   color: var(--bs-body-bg);
+  margin: 0 10px 0 10px;
+  font-size: 20px;
 }
 
 .service-details ul i {
-  /* font-size: 20px; */
   margin-right: 8px;
   color: var(--accent-color);
   text-align: justify;
