--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -832,9 +832,14 @@ section,
   overflow: clip;
 }
 .service-details{
-  background-image: url(../img/fondo_servs.jpg);
-  background-size: cover;
+  background-image: linear-gradient(rgba(34, 34, 34, 0.8),rgba(34, 34, 34, 0.8)),url(../img/fondo_servs.jpg);
+  /* background-size: cover; */
 }
+
+/* .service-details::before{
+  background-color: var(--default-color);
+  z-index: 1;
+} */
 
 @media (max-width: 1199px) {
 
@@ -1683,7 +1688,6 @@ section,
 }
 
 .service-details .services-img {
-  /* margin-bottom: 20px; */
   width: 100%;
 }
 
@@ -1691,6 +1695,8 @@ section,
   font-size: 23px;
   font-weight: 700;
   color: var(--accent-color);
+  background-color: var(--background-color);
+  margin:10px 0;
 }
 
 .service-details h4 {
