--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -161,25 +161,19 @@ h6 {
   transition: all 0.5s;
 }
 
-.header .topbar .contact-info i {
+.header .topbar .contact-info i, .contact .contact-info i {
   font-style: normal;
   color: var(--accent-color);
 }
 
-.header .topbar .contact-info i a,
-.header .topbar .contact-info i span {
+.header .topbar .contact-info i a, .contact .contact-info i a {
+  line-height: 0;
+  transition: 0.3s;
   padding-left: 5px;
   color: var(--default-color);
 }
 
 @media (max-width: 575px) {
-
-  .header .topbar .contact-info i a,
-  .header .topbar .contact-info i .contact-info-tel {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-  }
 
   .justify-content-center {
     margin-bottom: 25px;
@@ -191,11 +185,6 @@ h6 {
   .justify-content-center {
     font-size: 10px;
   }
-}
-
-.header .topbar .contact-info i a {
-  line-height: 0;
-  transition: 0.3s;
 }
 
 .header .topbar .contact-info i a:hover {
