--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -820,6 +820,11 @@ section,
   scroll-margin-top: 100px;
   overflow: clip;
 }
+
+/* .contact{
+  background-image: linear-gradient(rgba(34, 34, 34, 0.8), rgba(34, 34, 34, 0.8)), url(../img/fondo_servs.jpg);
+} */
+
 .service-details{
   background-image: linear-gradient(rgba(34, 34, 34, 0.8),rgba(34, 34, 34, 0.8)),url(../img/fondo_servs.jpg);
   /* background-size: cover; */
